--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "scripts": {
     "ng": "ng",
     "start": "npm run start:wallet",
-    "start:wallet": "ng serve --app 0 --hmr --ssl --ssl-key ssl/server.key --ssl-cert ssl/server.crt",
-    "start:wallet:stage": "ng serve --app 0 --hmr --ssl --ssl-key ssl/server.key --ssl-cert ssl/server.crt --environment stage",
-    "start:wallet:prod": "ng serve --app 0 --hmr --ssl --ssl-key ssl/server.key --ssl-cert ssl/server.crt --environment prod",
-    "start:prototype": "ng serve --app 1 --hmr --ssl --ssl-key ssl/server.key --ssl-cert ssl/server.crt",
-    "start:prototype:stage": "ng serve --app 1 --hmr --ssl --ssl-key ssl/server.key --ssl-cert ssl/server.crt --environment stage",
-    "start:prototype:prod": "ng serve --app 1 --hmr --ssl --ssl-key ssl/server.key --ssl-cert ssl/server.crt --environment prod",
+    "start:wallet": "ng serve --project muzika-wallet --hmr --ssl --ssl-key ssl/server.key --ssl-cert ssl/server.crt",
+    "start:wallet:stage": "npm run start:wallet -- -c stage",
+    "start:wallet:prod": "npm run start:wallet -- -c production",
+    "start:prototype": "ng serve --project muzika-prototype --hmr --ssl --ssl-key ssl/server.key --ssl-cert ssl/server.crt",
+    "start:prototype:stage": "npm run start:prototype -- -c stage",
+    "start:prototype:prod": "npm run start:prototype -- -c production",
     "build": "ng build --prod --aot",
     "test": "ng test",
     "lint": "ng lint",
@@ -20,15 +20,15 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.2.10",
-    "@angular/common": "^5.2.10",
-    "@angular/compiler": "^5.2.10",
-    "@angular/core": "^5.2.10",
-    "@angular/forms": "^5.2.10",
-    "@angular/http": "^5.2.10",
-    "@angular/platform-browser": "^5.2.10",
-    "@angular/platform-browser-dynamic": "^5.2.10",
-    "@angular/router": "^5.2.10",
+    "@angular/animations": "6.0.2",
+    "@angular/common": "6.0.2",
+    "@angular/compiler": "6.0.2",
+    "@angular/core": "6.0.2",
+    "@angular/forms": "6.0.2",
+    "@angular/http": "6.0.2",
+    "@angular/platform-browser": "6.0.2",
+    "@angular/platform-browser-dynamic": "6.0.2",
+    "@angular/router": "6.0.2",
     "@angularclass/hmr": "^2.1.3",
     "@ledgerhq/hw-transport-u2f": "^4.7.3",
     "@ledgerhq/web3-subprovider": "^4.11.1",
@@ -45,20 +45,20 @@
     "ethereumjs-wallet-browser": "^0.6.0",
     "fs-extra": "^5.0.0",
     "ngx-bootstrap": "^2.0.4",
-    "rxjs": "^5.5.6",
+    "rxjs": "^6.1.0",
     "rxjs-compat": "^6.1.0",
     "safe-buffer": "^5.1.2",
     "truffle-contract": "^3.0.5",
     "truffle-hdwallet-provider": "0.0.3",
     "web3": "^0.20.6",
     "web3-provider-engine": "^14.0.5",
-    "zone.js": "^0.8.19"
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
     "@0xproject/types": "^0.6.1",
-    "@angular/cli": "~1.7.4",
-    "@angular/compiler-cli": "^5.2.10",
-    "@angular/language-service": "^5.2.10",
+    "@angular/cli": "6.0.1",
+    "@angular/compiler-cli": "6.0.2",
+    "@angular/language-service": "6.0.2",
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
@@ -86,6 +86,7 @@
     "truffle": "^4.1.8",
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
-    "typescript": "~2.5.3"
+    "typescript": "2.7.2",
+    "@angular-devkit/build-angular": "~0.6.1"
   }
 }
