--- a/projects/prototype/tsconfig.spec.json
+++ b/projects/prototype/tsconfig.spec.json
@@ -13,7 +13,8 @@
   },
   "files": [
     "src/test.ts",
-    "src/polyfills.ts"
+    "src/polyfills.ts",
+    "polyfills.ts"
   ],
   "include": [
     "**/*.spec.ts",
