--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "muzika-contract"]
 	path = muzika-contract
-	url = git@github.com:MuzikaFoundation/muzika-contract.git
+	url = https://github.com/MuzikaFoundation/muzika-contract.git
