--- a/package.json
+++ b/package.json
@@ -27,20 +27,20 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "6.0.2",
+    "@angular/animations": "^6.0.2",
     "@angular/cdk": "^6.0.2",
-    "@angular/common": "6.0.2",
-    "@angular/compiler": "6.0.2",
-    "@angular/core": "6.0.2",
-    "@angular/forms": "6.0.2",
-    "@angular/http": "6.0.2",
+    "@angular/common": "^6.0.2",
+    "@angular/compiler": "^6.0.2",
+    "@angular/core": "^6.0.2",
+    "@angular/forms": "^6.0.2",
+    "@angular/http": "^6.0.2",
     "@angular/material": "^6.0.2",
-    "@angular/platform-browser": "6.0.2",
-    "@angular/platform-browser-dynamic": "6.0.2",
-    "@angular/router": "6.0.2",
+    "@angular/platform-browser": "^6.0.2",
+    "@angular/platform-browser-dynamic": "^6.0.2",
+    "@angular/router": "^6.0.2",
     "@angularclass/hmr": "^2.1.3",
-    "@ledgerhq/hw-transport-u2f": "^4.7.3",
-    "@ledgerhq/web3-subprovider": "^4.11.1",
+    "@ledgerhq/hw-transport-u2f": "^4.12.0",
+    "@ledgerhq/web3-subprovider": "^4.12.0",
     "alertify.js": "^1.0.12",
     "bignumber.js": "^5.0.0",
     "bn.js": "^4.11.8",
@@ -55,7 +55,6 @@
     "fs-extra": "^5.0.0",
     "ngx-bootstrap": "^2.0.5",
     "rxjs": "^6.1.0",
-    "rxjs-compat": "^6.1.0",
     "safe-buffer": "^5.1.2",
     "stream-browserify": "^2.0.1",
     "truffle-contract": "^3.0.5",
@@ -67,13 +66,13 @@
   },
   "devDependencies": {
     "@0xproject/types": "^0.6.1",
-    "@angular-devkit/build-angular": "^0.6.2",
-    "@angular/cli": "6.0.1",
-    "@angular/compiler-cli": "6.0.2",
-    "@angular/language-service": "6.0.2",
+    "@angular-devkit/build-angular": "^0.6.3",
+    "@angular/cli": "^6.0.3",
+    "@angular/compiler-cli": "^6.0.2",
+    "@angular/language-service": "^6.0.2",
     "@types/jasmine": "^2.8.7",
     "@types/jasminewd2": "^2.0.3",
-    "@types/node": "~10.1.0",
+    "@types/node": "^10.1.1",
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
@@ -83,21 +82,21 @@
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
     "chai-bignumber": "^2.0.2",
-    "codelyzer": "^4.0.1",
+    "codelyzer": "^4.3.0",
     "command-line-args": "^5.0.2",
-    "jasmine-core": "~2.8.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~2.0.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
+    "jasmine-core": "^3.1.0",
+    "jasmine-spec-reporter": "^4.2.1",
+    "karma": "^2.0.2",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-coverage-istanbul-reporter": "^1.4.3",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
     "prettier": "^1.12.1",
-    "protractor": "~5.1.2",
+    "protractor": "^5.3.2",
     "solium": "git+https://github.com/duaraghav8/Solium.git#develop",
     "truffle": "^4.1.8",
-    "ts-node": "~4.1.0",
-    "tslint": "~5.9.1",
+    "ts-node": "^6.0.3",
+    "tslint": "^5.10.0",
     "typescript": "2.7.2"
   }
 }
