--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "postinstall": "npx electron-builder install-app-deps",
     "ng": "ng",
     "start": "npm run start:wallet",
-    "start:wallet": "ng serve --project muzika-wallet --hmr --ssl --ssl-key ssl/server.key --ssl-cert ssl/server.crt",
+    "start:wallet": "ng serve -o --project muzika-wallet --hmr --ssl --ssl-key ssl/server.key --ssl-cert ssl/server.crt",
     "sw": "npm run start:wallet ",
     "start:wallet:stage": "npm run start:wallet -- -c stage",
     "start:wallet:prod": "npm run start:wallet -- -c production",
-    "start:prototype": "ng serve --project muzika-prototype --hmr --ssl --ssl-key ssl/server.key --ssl-cert ssl/server.crt",
+    "start:prototype": "ng serve -o --project muzika-prototype --hmr --ssl --ssl-key ssl/server.key --ssl-cert ssl/server.crt",
     "start:viewer": "npm-run-all -p serve:viewer electron:serve",
     "serve:viewer": "ng serve --project muzika-ipfs-viewer -o",
     "sp": "npm run start:prototype -o",
