--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,32 +2,25 @@
   "compileOnSave": false,
   "compilerOptions": {
     "baseUrl": "./",
-    "outDir": "../../out-tsc/app",
     "sourceMap": true,
     "declaration": false,
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "target": "es5",
-    "module": "es2015",
+    "module": "commonjs",
     "types": ["node", "web3"],
     "typeRoots": [
-      "../../node_modules/@types",
-      "../../node_modules/@0xproject/typescript-typings/types",
-      "src/types"
+      "node_modules/@types",
+      "node_modules/@0xproject/typescript-typings/types"
     ],
     "lib": [
       "es2017",
       "es2016",
       "es2015",
+      "es6",
+      "es5",
       "dom"
-    ],
-    "paths": {
-      "@muzika/core": ["projects/core/index.ts"]
-    }
-  },
-  "exclude": [
-    "src/test.ts",
-    "**/*.spec.ts"
-  ]
+    ]
+  }
 }
