--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "build:viewer": "npm run electron:tsc && ng build --project muzika-ipfs-viewer",
     "build:viewer:stage": "npm run build:viewer -- -c stage",
     "build:viewer:prod": "npm run build:viewer -- -c production",
-    "electron:tsc": "tsc main.ts",
+    "electron:tsc": "tsc main.ts --allowJs --lib es5,dom,es2016,es2015",
     "electron:serve": "wait-on http-get://localhost:4200/ && npm run electron:tsc && electron . --serve",
     "electron:local": "npm run build:viewer:prod && electron .",
     "electron:linux": "npm run build:viewer:prod && npx electron-builder build --linux",
@@ -119,9 +119,11 @@
     "protractor": "^5.3.2",
     "solium": "git+https://github.com/duaraghav8/Solium.git#develop",
     "truffle": "^4.1.8",
+    "ts-loader": "^4.3.0",
     "ts-node": "^6.0.3",
     "tslint": "^5.10.0",
     "typescript": "2.7.2",
-    "wait-on": "^2.1.0"
+    "wait-on": "^2.1.0",
+    "webpack-cli": "^2.1.3"
   }
 }
