--- a/package.json
+++ b/package.json
@@ -43,17 +43,22 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^6.0.2",
-    "@angular/cdk": "^6.0.2",
+    "@angular/cdk": "^6.1.0",
     "@angular/common": "^6.0.2",
     "@angular/compiler": "^6.0.2",
     "@angular/core": "^6.0.2",
     "@angular/forms": "^6.0.2",
     "@angular/http": "^6.0.2",
-    "@angular/material": "^6.0.2",
+    "@angular/material": "^6.1.0",
     "@angular/platform-browser": "^6.0.2",
     "@angular/platform-browser-dynamic": "^6.0.2",
     "@angular/router": "^6.0.2",
     "@angularclass/hmr": "^2.1.3",
+    "@ionic-native/core": "5.0.0-beta.10",
+    "@ionic-native/splash-screen": "5.0.0-beta.10",
+    "@ionic-native/status-bar": "5.0.0-beta.10",
+    "@ionic/angular": "4.0.0-alpha.7",
+    "@ionic/schematics-angular": "latest",
     "@ledgerhq/hw-transport-u2f": "^4.12.0",
     "@ledgerhq/web3-subprovider": "^4.12.0",
     "@ngx-translate/core": "^10.0.1",
@@ -122,7 +127,7 @@
     "prettier": "^1.12.1",
     "protractor": "^5.3.2",
     "solium": "git+https://github.com/duaraghav8/Solium.git#develop",
-    "truffle": "^4.1.8",
+    "truffle": "^4.1.9",
     "ts-loader": "^4.3.0",
     "ts-node": "^6.0.3",
     "tslint": "^5.10.0",
