--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-redux/store": "^7.1.1",
     "@angular/animations": "^6.0.3",
     "@angular/cdk": "^6.1.0",
     "@angular/common": "^6.0.3",
@@ -89,7 +90,9 @@
     "jquery": "^3.3.1",
     "ngx-bootstrap": "^2.0.5",
     "popper.js": "^1.14.3",
+    "redux": "^3.7.2",
     "rxjs": "^6.2.0",
+    "rxjs-compat": "^6.1.0",
     "safe-buffer": "^5.1.2",
     "stream-browserify": "^2.0.1",
     "truffle-contract": "^3.0.5",
