--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "license": "MIT",
   "main": "main.js",
   "scripts": {
-    "postinstall": "npx electron-builder install-app-deps",
     "ng": "ng",
     "start": "npm run start:wallet",
     "start:wallet": "ng serve -o --project muzika-wallet --hmr --ssl --ssl-key ssl/server.key --ssl-cert ssl/server.crt",
@@ -28,6 +27,7 @@
     "build:viewer:stage": "npm run build:viewer -- -c stage",
     "build:viewer:prod": "npm run build:viewer -- -c production",
     "electron:tsc": "tsc main.ts --allowJs --lib es5,dom,es2016,es2015",
+    "electron:ready": "npx electron-builder install-app-deps",
     "electron:serve": "wait-on http-get://localhost:4200/ && npm run electron:tsc && electron . --serve",
     "electron:local": "npm run build:viewer:prod && electron .",
     "electron:linux": "npm run build:viewer:prod && npx electron-builder build --linux",
@@ -63,7 +63,6 @@
     "@ionic/storage": "^2.1.3",
     "@ledgerhq/hw-transport-u2f": "^4.12.0",
     "@ledgerhq/web3-subprovider": "^4.12.0",
-    "@muzika/core": "^0.0.2",
     "@ngx-translate/core": "^10.0.2",
     "@ngx-translate/http-loader": "^3.0.1",
     "alertify.js": "^1.0.12",
@@ -74,11 +73,11 @@
     "cordova-android": "6.3.0",
     "cordova-ios": "4.5.4",
     "cordova-plugin-device": "^2.0.2",
-    "cordova-plugin-ionic-keyboard": "^2.1.0",
+    "cordova-plugin-ionic-keyboard": "^2.1.2",
     "cordova-plugin-ionic-webview": "^1.2.1",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-whitelist": "^1.3.3",
-    "cordova-sqlite-storage": "^2.3.1",
+    "cordova-sqlite-storage": "^2.3.2",
     "core-js": "^2.5.6",
     "eth-sig-util": "^1.4.2",
     "ethereumjs-abi": "^0.6.5",
@@ -106,9 +105,9 @@
   "devDependencies": {
     "@0xproject/types": "^0.6.1",
     "@0xproject/typescript-typings": "^0.3.2",
-    "@angular-devkit/build-angular": "^0.6.3",
-    "@angular-devkit/build-ng-packagr": "^0.6.3",
-    "@angular/cli": "^6.0.3",
+    "@angular-devkit/build-angular": "^0.6.5",
+    "@angular-devkit/build-ng-packagr": "^0.6.5",
+    "@angular/cli": "^6.0.5",
     "@angular/compiler-cli": "^6.0.3",
     "@angular/language-service": "^6.0.3",
     "@types/jasmine": "^2.8.7",
@@ -125,8 +124,8 @@
     "chai-bignumber": "^2.0.2",
     "codelyzer": "^4.3.0",
     "command-line-args": "^5.0.2",
-    "electron": "2.0.1",
-    "electron-builder": "20.13.4",
+    "electron": "2.0.2",
+    "electron-builder": "20.15.0",
     "electron-reload": "1.2.2",
     "jasmine-core": "^3.1.0",
     "jasmine-spec-reporter": "^4.2.1",
@@ -143,11 +142,11 @@
     "solium": "git+https://github.com/duaraghav8/Solium.git#develop",
     "truffle": "^4.1.11",
     "ts-loader": "^4.3.0",
-    "ts-node": "^6.0.3",
+    "ts-node": "^6.0.5",
     "tslint": "^5.10.0",
     "typescript": "2.7.2",
     "wait-on": "^2.1.0",
-    "webpack-cli": "^2.1.3"
+    "webpack-cli": "^2.1.4"
   },
   "cordova": {
     "plugins": {
