--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "start:wallet:prod": "npm run start:wallet -- -c production",
     "start:prototype": "ng serve -o --project muzika-prototype --hmr --ssl --ssl-key ssl/server.key --ssl-cert ssl/server.crt",
     "start:viewer": "npm-run-all -p serve:viewer electron:serve",
-    "serve:viewer": "ng serve --project muzika-ipfs-viewer -o",
+    "serve:viewer": "ng serve --project muzika-ipfs-viewer",
     "sp": "npm run start:prototype -o",
     "start:prototype:stage": "npm run start:prototype -- -c stage",
     "start:prototype:prod": "npm run start:prototype -- -c production",
@@ -126,6 +126,7 @@
     "command-line-args": "^5.0.2",
     "electron": "2.0.2",
     "electron-builder": "20.15.0",
+    "electron-rebuild": "^1.7.3",
     "electron-reload": "1.2.2",
     "jasmine-core": "^3.1.0",
     "jasmine-spec-reporter": "^4.2.1",
