--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "@ngx-translate/core": "^10.0.2",
     "@ngx-translate/http-loader": "^3.0.1",
     "alertify.js": "^1.0.12",
+    "angular-froala-wysiwyg": "^2.8.1",
     "bignumber.js": "^5.0.0",
     "bn.js": "^4.11.8",
     "bootstrap": "^4.1.1",
@@ -88,6 +89,7 @@
     "ethereumjs-util": "^5.2.0",
     "ethereumjs-wallet": "^0.6.0",
     "ethereumjs-wallet-browser": "^0.6.0",
+    "froala-editor": "^2.8.1",
     "fs-extra": "^5.0.0",
     "ipfs": "^0.28.2",
     "jquery": "^3.3.1",
