--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-redux/store": "^7.1.1",
+    "@angular-redux/store": "^9.0.0-beta.0",
     "@angular/animations": "^6.0.3",
     "@angular/cdk": "^6.1.0",
     "@angular/common": "^6.0.3",
@@ -95,7 +95,7 @@
     "jquery": "^3.3.1",
     "ngx-bootstrap": "^2.0.5",
     "popper.js": "^1.14.3",
-    "redux": "^3.7.2",
+    "redux": "^4.0.0",
     "rxjs": "^6.2.0",
     "rxjs-compat": "^6.1.0",
     "safe-buffer": "^5.1.2",
