--- a/angular.json
+++ b/angular.json
@@ -157,11 +157,8 @@
           "options": {
             "tsConfig": [
               "projects/core/tsconfig.json",
-              "projects/core/tsconfig.spec.json",
               "projects/wallet/tsconfig.json",
-              "projects/wallet/tsconfig.spec.json",
-              "projects/prototype/tsconfig.json",
-              "projects/prototype/tsconfig.spec.json"
+              "projects/prototype/tsconfig.json"
             ],
             "exclude": [
               "**/node_modules/**"
@@ -310,11 +307,8 @@
           "options": {
             "tsConfig": [
               "projects/core/tsconfig.json",
-              "projects/core/tsconfig.spec.json",
               "projects/wallet/tsconfig.json",
-              "projects/wallet/tsconfig.spec.json",
-              "projects/prototype/tsconfig.json",
-              "projects/prototype/tsconfig.spec.json"
+              "projects/prototype/tsconfig.json"
             ],
             "exclude": [
               "**/node_modules/**"
