--- a/angular.json
+++ b/angular.json
@@ -372,9 +372,34 @@
             "styles": [
               "projects/viewer/src/styles.scss",
               "scss/fontawesome/css/fontawesome.min.css",
-              "scss/fontawesome/css/fontawesome-all.min.css"
+              "scss/fontawesome/css/fontawesome-all.min.css",
+              "node_modules/froala-editor/css/froala_editor.min.css",
+              "node_modules/froala-editor/css/froala_editor.pkgd.min.css",
+              "node_modules/froala-editor/css/froala_style.min.css",
+              "node_modules/froala-editor/css/plugins/video.min.css",
+              "node_modules/froala-editor/css/plugins/colors.min.css",
+              "node_modules/froala-editor/css/plugins/table.min.css",
+              "node_modules/froala-editor/css/plugins/emoticons.min.css",
+              "projects/viewer/src/theme/froala-theme.scss"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/jquery/dist/jquery.min.js",
+              "node_modules/froala-editor/js/froala_editor.min.js",
+              "node_modules/froala-editor/js/languages/ko.js",
+              "node_modules/froala-editor/js/plugins/link.min.js",
+              "node_modules/froala-editor/js/plugins/table.min.js",
+              "node_modules/froala-editor/js/plugins/url.min.js",
+              "node_modules/froala-editor/js/plugins/colors.min.js",
+              "node_modules/froala-editor/js/plugins/align.min.js",
+              "node_modules/froala-editor/js/plugins/emoticons.min.js",
+              "node_modules/froala-editor/js/plugins/font_size.min.js",
+              "node_modules/froala-editor/js/plugins/code_view.min.js",
+              "node_modules/froala-editor/js/plugins/lists.min.js",
+              "node_modules/froala-editor/js/plugins/paragraph_style.min.js",
+              "node_modules/froala-editor/js/plugins/image.min.js",
+              "node_modules/froala-editor/js/plugins/video.min.js",
+              "node_modules/froala-editor/js/plugins/image_manager.min.js"
+            ]
           },
           "configurations": {
             "stage": {
