--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "ipfs": "^0.28.2",
     "jquery": "^3.3.1",
     "ngx-bootstrap": "^2.0.5",
+    "pdf.js": "^0.1.0",
     "popper.js": "^1.14.3",
     "redux": "^4.0.0",
     "rxjs": "^6.2.0",
