--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@angular/router": "^6.0.3",
     "@angularclass/hmr": "^2.1.3",
     "@ionic-native/core": "5.0.0-beta.10",
+    "@ionic-native/native-storage": "^5.0.0-beta.10",
     "@ionic-native/splash-screen": "5.0.0-beta.10",
     "@ionic-native/status-bar": "5.0.0-beta.10",
     "@ionic/angular": "4.0.0-alpha.7",
@@ -82,6 +83,7 @@
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-ionic-keyboard": "^2.1.2",
     "cordova-plugin-ionic-webview": "^1.2.1",
+    "cordova-plugin-nativestorage": "^2.3.1",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova-sqlite-storage": "^2.3.2",
@@ -166,7 +168,8 @@
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
       "cordova-plugin-ionic-keyboard": {},
-      "cordova-sqlite-storage": {}
+      "cordova-sqlite-storage": {},
+      "cordova-plugin-nativestorage": {}
     },
     "platforms": [
       "android",
