--- a/angular.json
+++ b/angular.json
@@ -435,7 +435,9 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "muzika-ipfs-viewer:build"
+            "browserTarget": "muzika-ipfs-viewer:build",
+            "hmr": true,
+            "hmrWarning": false
           },
           "configurations": {
             "production": {
