--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "ipfs": "^0.28.2",
     "jquery": "^3.3.1",
     "ngx-bootstrap": "^3.0.0",
+    "ngx-uploader": "^4.3.0",
     "pdf.js": "^0.1.0",
     "popper.js": "^1.14.3",
     "redux": "^4.0.0",
