--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "start:web:prod": "npm run start:web -- -c production",
     "sw": "npm run start:web",
     "sws": "npm run start:web:stage",
-    "tsc:core": "tsc -p projects/core/tsconfig.common.json && npm link projects/core/",
+    "tsc:core": "tsc -p projects/core/tsconfig.electron.compile.json && npm link projects/core/",
     "tsc:studio-main": "node hooks/symlink_node_modules.js && tsc -p projects/studio-main/tsconfig.build.json",
     "build:core": "ng build muzika-core",
     "build:studio": "npm run postinstall && npm run electron:tsc && ng build muzika-studio-renderer",
