--- a/package.json
+++ b/package.json
@@ -114,10 +114,11 @@
     "fluent-ffmpeg": "^2.1.2",
     "froala-editor": "2.8.1",
     "fs-extra": "^5.0.0",
+    "go-ipfs-wrapper": "0.0.7",
     "hash.js": "^1.1.5",
     "hls.js": "^0.9.1",
     "imagemagick-native": "git+https://github.com/MuzikaFoundation/node-imagemagick-native.git#genpreview",
-    "ipfs": "^0.30.1",
+    "ipfs-api": "^22.2.4",
     "jquery": "^3.3.1",
     "ngx-bootstrap": "^3.0.1",
     "ngx-uploader": "^6.0.1",
