--- a/projects/studio-main/package.json
+++ b/projects/studio-main/package.json
@@ -35,7 +35,8 @@
     "hash.js": "^1.1.5",
     "hls.js": "^0.9.1",
     "imagemagick-native": "git+https://github.com/MuzikaFoundation/node-imagemagick-native.git#genpreview",
-    "ipfs": "^0.30.1",
+    "go-ipfs-wrapper": "^0.0.7",
+    "ipfs-api": "^22.2.4",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.3",
     "redux": "^4.0.0",
