--- a/projects/studio-main/package.json
+++ b/projects/studio-main/package.json
@@ -35,7 +35,7 @@
     "fs-extra": "^5.0.0",
     "hash.js": "^1.1.5",
     "hls.js": "^0.9.1",
-    "imagemagick-native": "git+https://github.com/MuzikaFoundation/node-imagemagick-native.git#genpreview",
+    "imagemagick": "^0.1.3",
     "go-ipfs-wrapper": "^0.1.1",
     "ipfs-api": "^22.2.4",
     "jquery": "^3.3.1",
